<resources>
    <string name="app_name">pyramid_game</string>
    <string name="settings">SETTINGS</string>
    <string name="levels">LEVELS</string>
    <string name="rules">RULES</string>
    <string name="start">START</string>
    <string name="members">MEMBERS</string>
    <string name="colour_info">COLOUR\nINFO</string>
    <string name="level">LEVEL</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_10">10</string>
    <string name="played_levels">Played levels</string>
    <string name="losing_levels">Losing levels</string>
    <string name="guessed_within_5_seconds">Guessed within 5 seconds</string>
    <string name="guessed_within_the_first_3_seconds">Guessed within the first 3 seconds</string>
    <string name="guessed_right_off_the_bat">Guessed right off the bat</string>
    <string name="name">name</string>
    <string name="level_down">level</string>
    <string name="best_time">best time</string>
    <string name="ryan_levin">Ryan Levin</string>
    <string name="cooper_kenter">Cooper Kenter</string>
    <string name="jakob_torff">Jakob Torff</string>
    <string name="davis_george">Davis George</string>
    <string name="abram_george">Abram George</string>
    <string name="cooper_korsgaard">Cooper Korsgaard</string>
    <string name="craig_bator">Craig Bator</string>
    <string name="_13_00">13:00</string>
    <string name="_22_00">22:00</string>
    <string name="_20_00">20:00</string>
    <string name="_12_40">12:40</string>
    <string name="_21_45">21:45</string>
    <string name="_09_00">09:00</string>
    <string name="_21_00">21:00</string>
</resources>