<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".ui.members.MembersFragment">


    <ImageView
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/icon_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="113dp"
        android:src="@drawable/icon_members_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="177dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_background_members"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:src="@drawable/icon_stars_members"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/imageView15" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="@+id/imageView15" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_down"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="@+id/imageView18"
        app:layout_constraintStart_toStartOf="@+id/imageView18"
        app:layout_constraintTop_toTopOf="@+id/imageView15" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:text="@string/best_time"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="@+id/imageView15" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ryan_levin"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView36"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="@+id/imageView17"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cooper_kenter"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView37"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jakob_torff"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView38"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/davis_george"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView40"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abram_george"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView41"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView40" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="47dp"
        android:text="@string/cooper_korsgaard"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView39" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/craig_bator"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView39"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="129dp"
        android:layout_height="122dp"
        android:layout_marginBottom="7dp"
        android:src="@drawable/pyramid_xxxdpi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView35"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="@+id/textView35"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_13_00"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView42"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/textView42"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_22_00"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView43"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/textView43"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20_00"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView44"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/textView44"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12_40"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView45"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/textView45"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_21_45"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView47"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/textView47"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_09_00"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView48"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/textView48"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_21_00"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView46"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/textView46"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView36"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView37"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="@+id/textView37"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView38"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="@+id/textView38"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView40"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="@+id/textView40"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView39"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="@+id/textView39"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView41"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="@+id/textView41"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>