<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".ui.menu.MenuFragment">

    <ImageView
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="83dp"
        android:outlineProvider="bounds"
        android:src="@drawable/icon_front_button"
        android:translationZ="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnLevels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginTop="22dp"
        android:outlineProvider="bounds"
        android:src="@drawable/icon_front_button"
        android:translationZ="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSettings" />

    <ImageView
        android:id="@+id/btnRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="22dp"
        android:outlineProvider="bounds"
        android:src="@drawable/icon_front_button"
        android:translationZ="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLevels" />

    <ImageView
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="20dp"
        android:outlineProvider="bounds"
        android:src="@drawable/icon_front_button"
        android:translationZ="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRules" />

    <ImageView
        android:id="@+id/btnMembers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginTop="24dp"
        android:outlineProvider="bounds"
        android:src="@drawable/icon_front_button"
        android:translationZ="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

    <ImageView
        android:id="@+id/btnColourInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="22dp"
        android:outlineProvider="bounds"
        android:src="@drawable/icon_front_button"
        android:translationZ="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMembers" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="14dp"
        android:src="@drawable/icon_stroke"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginBottom="7dp"
        android:fontFamily="@font/notable"
        android:gravity="center"
        android:outlineProvider="bounds"
        android:shadowColor="@color/black"
        android:shadowDy="15"
        android:shadowRadius="5"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:translationZ="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSettings"
        app:layout_constraintEnd_toEndOf="@+id/btnSettings"
        app:layout_constraintStart_toStartOf="@+id/btnSettings"
        app:layout_constraintTop_toTopOf="@+id/btnSettings" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/notable"
        android:gravity="center"
        android:outlineProvider="bounds"
        android:shadowColor="@color/black"
        android:shadowDy="15"
        android:shadowRadius="5"
        android:text="@string/levels"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:translationZ="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnLevels"
        app:layout_constraintEnd_toEndOf="@+id/btnLevels"
        app:layout_constraintStart_toStartOf="@+id/btnLevels"
        app:layout_constraintTop_toTopOf="@+id/btnLevels" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/notable"
        android:gravity="center"
        android:outlineProvider="bounds"
        android:shadowColor="@color/black"
        android:shadowDy="15"
        android:shadowRadius="5"
        android:text="@string/rules"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:translationZ="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnRules"
        app:layout_constraintEnd_toEndOf="@+id/btnRules"
        app:layout_constraintStart_toStartOf="@+id/btnRules"
        app:layout_constraintTop_toTopOf="@+id/btnRules" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/notable"
        android:gravity="center"
        android:outlineProvider="bounds"
        android:shadowColor="@color/black"
        android:shadowDy="15"
        android:shadowRadius="5"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:translationZ="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="@+id/btnStart"
        app:layout_constraintStart_toStartOf="@+id/btnStart"
        app:layout_constraintTop_toTopOf="@+id/btnStart" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/notable"
        android:gravity="center"
        android:outlineProvider="bounds"
        android:shadowColor="@color/black"
        android:shadowDy="15"
        android:shadowRadius="5"
        android:text="@string/members"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:translationZ="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnMembers"
        app:layout_constraintEnd_toEndOf="@+id/btnMembers"
        app:layout_constraintStart_toStartOf="@+id/btnMembers"
        app:layout_constraintTop_toTopOf="@+id/btnMembers" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/notable"
        android:gravity="center"
        android:outlineProvider="bounds"
        android:shadowColor="@color/black"
        android:shadowDy="15"
        android:shadowRadius="5"
        android:text="@string/colour_info"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:translationZ="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnColourInfo"
        app:layout_constraintEnd_toEndOf="@+id/btnColourInfo"
        app:layout_constraintStart_toStartOf="@+id/btnColourInfo"
        app:layout_constraintTop_toTopOf="@+id/btnColourInfo" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="115dp"
        android:layout_height="247dp"
        android:layout_marginTop="99dp"
        android:src="@drawable/icon_pyramid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSettings" />

</androidx.constraintlayout.widget.ConstraintLayout>